--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 </head>
 <body>
     <header>
-        <h1>Bodywork Hut</h1>
+        <a href="index.html">
+            <img src="logo.png" alt="Bodywork Hut Logo" class="logo">
+        </a>
+        <h1 style="color: #fdfdfd;">Bodywork Hut</h1>
         <nav>
             <ul>
+                <li><a href="https://www.fresha.com/a/bodywork-hut-sheffield-cnm5s1g9" target="_blank">Book Now</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="https://www.fresha.com/a/bodywork-hut-sheffield-cnm5s1g9" target="_blank">Book Now</a></li>
             </ul>
         </nav>
     </header>
