--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="logo.png" alt="Bodywork Hut Logo" class="logo">
+            <img src="images/logo.png" alt="Bodywork Hut Logo" class="logo">
         </a>
         <h1 style="color: #fdfdfd;">Bodywork Hut</h1>
         <nav>
@@ -30,8 +30,8 @@
     </header>
     
     <main>
-        <section id="banner">
-            <img src="sports-massage-banner.jpg" alt="Sports Massage Therapy">
+        <section id="banner" style="background-color: #3294a3;">
+            <img src="images/sports-massage-banner.jpg" alt="Sports Massage Therapy">
         </section>
         
         <section id="about">
